--- a/Client/src/components/Landing-page/index.css
+++ b/Client/src/components/Landing-page/index.css
@@ -1,95 +1,113 @@
-.home__hero-section {
-  background: #086a87;
-  color: #fff;
-  padding: 160px 0;
+.main-page {
+  width: 97%;
+  margin: auto;
+  padding-top: 50px;
+  /* background: rgb(209, 206, 206); */
+  min-height: 100vh;
 }
-
-.home__hero-row {
-  align-items: center;
-}
-
-.rows {
+.content-div {
+  width: 99%;
+  margin: auto;
+  margin-bottom: 50px;
   display: flex;
-  margin-right: -15px;
-  margin-bottom: -15px;
-  margin-left: -15px;
-  flex-wrap: wrap;
-  align-content: stretch;
+  padding-left: 50px;
+  justify-content: space-between;
+  border-bottom: solid #055720;
 }
-
-.cols {
-  margin-bottom: 15px;
-  padding-right: 15px;
-  padding-left: 15px;
-  flex: 1;
-  max-width: 50%;
-  flex-basis: 50%;
-}
-
-.home__hero-text-wrapper {
-  max-width: 540px;
-  padding-top: 0;
-  padding-bottom: 60px;
-}
-
-.top-line {
-  /* color: #1c2237; */
+.heading-div {
+  text-align: center;
+  color: rgb(99, 12, 12);
+  font-family: arial, sans-serif;
   font-size: 16px;
-  line-height: 16px;
-  font-weight: 700;
-  letter-spacing: 1.4px;
-  text-transform: uppercase;
-  margin-bottom: 16px;
+  font-weight: bold;
+  margin-top: 0px;
+  margin-bottom: 1px;
+}
+.display-content {
+  /* background: rgb(229, 209, 209); */
+  list-style: none;
+  padding: 20px;
+}
+.content-data {
+  background: rgb(255, 130, 92);
+  padding-left: 30px;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  margin-left: 35px;
+  color: #fff;
+}
+/* hhhhhhhhhhhhhhhhhhhhh */
+.listbox-area {
+  width: 350px;
+  height: 400px;
+  text-align: center;
+  margin: auto;
+  overflow-x: auto;
+  /* margin-left: 20px;
+  margin-top: 30px; */
+  grid-gap: 2em;
+  padding: 20px;
+  border: 1px solid #aaa;
+  background: #e5e1e9;
 }
 
-.heading {
-  margin-bottom: 24px;
-  font-size: 48px;
-  line-height: 1.1;
-  font-weight: 600;
-  /* color: #1c2237; */
+.listbox-label {
+  color: #000080;
+  font-size: 20px;
+}
+.listbox {
+  list-style: none;
+  height: 200px;
+  overflow-y: auto;
+  margin: 1em 0 0;
+  padding: 0;
+  min-height: 18em;
+  border: 1px solid #aaa;
+  background: white;
 }
 
-.home__hero-subtitle {
-  max-width: 440px;
-  margin-bottom: 35px;
-  font-size: 18px;
-  line-height: 24px;
+.domain-list {
+  list-style: none;
+  cursor: pointer;
+  margin: 10px auto 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #000080;
+  color: #fff;
+}
+.selected-domain {
+  list-style: none;
+  display: flex;
+  /* width: 4; */
+  margin: 10px auto 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #fff;
+  color: #000080;
 }
 
-.home__hero-img-wrapper {
-  max-width: 555px;
+.rp-list {
+  list-style: none;
+
+  margin: 10px auto 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #8f0a8f;
+  color: #fff;
+  cursor: pointer;
+}
+.selected-rp {
+  list-style: none;
+  display: flex;
+  /* width: 4; */
+  margin: 10px auto 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #fff;
+  color: #000080;
 }
 
-.home__hero-img {
-  max-width: 95%;
-  margin-top: 0;
-  margin-right: 0;
-  margin-left: 10px;
-  padding-right: 0;
-}
-
-img {
-  border: 0;
-  max-width: 100%;
-  vertical-align: middle;
-  display: inline-block;
-}
-
-@media screen and (max-width: 991px) {
-  .container {
-    padding-right: 30px;
-    padding-left: 30px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .home__hero-text-wrapper {
-    padding-bottom: 65px;
-  }
-
-  .col {
-    max-width: 100%;
-    flex-basis: 100%;
-  }
+.mark-img {
+  width: 20px;
 }
